--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "next": "14.2.15",
     "react": "^18",
     "react-dom": "^18",
+    "react-simple-typewriter": "^5.0.1",
     "resend": "^4.0.0"
   },
   "devDependencies": {
